# dadou_control_ros

./: .gitignore  Dockerfile  README.md  agents.md  audios  dadou_utils  docker-compose.yml  docker_build.sh  json  main.py  packges-docker.txt  requirements.txt
conf/: Makefile  config.json  config.py  logging-docker.conf  logging-laptop.conf  logging-pi.conf  logging.conf  packages.txt  pyvenv.cfg  requirement-gpio.txt  requirements-gpio.txt  requirements-no-gui.txt  requirements.txt  secret  serial-by-id
conf/ros2_dependencies/robot_interfaces/: CMakeLists.txt
control/: main.py  message.py
controller/: control_config.py  control_factory.py  main_ros.py
dadoucontrol/: control_config.py  control_factory.py  control_static.py  main.py
docs/: README.md  architecture.md  interfaces.md  setup.md  testing.md
json/: config.json  expressions.json  lights.json  speechs.json
logs/: control.log.2022-05-23_15  control.log.2022-05-23_17  control.log.2022-05-23_22  control.log.2022-05-24_01  control.log.2022-05-24_07  control.log.2022-05-24_12  control.log.2022-05-24_14  control.log.2022-05-24_16  control.log.2022-05-24_18  control.log.2022-06-02_02  control.log.2022-06-07_14  control.log.2022-06-07_17  control.log.2022-06-08_06  control.log.2022-06-08_14  control.log.2022-06-08_16  control.log.2022-06-08_19  control.log.2022-06-09_00  control.log.2022-06-09_10  control.log.2022-06-09_13  control.log.2022-06-10_01  control.log.2022-06-13_19  control.log.2022-06-14_01  control.log.2022-06-14_13  control.log.2022-06-15_11  control.log.2022-06-19_18  (+11 more)
scripts/: bashrc  (+15 more)
(+265 files in other folders)
